--- a/ios/Runner/Runner.entitlements
+++ b/ios/Runner/Runner.entitlements
@@ -10,7 +10,7 @@
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)com.sixamtech.sixValley</string>
+		<string>$(AppIdentifierPrefix)com.maidc.mart</string>
 	</array>
 </dict>
 </plist>
